# finlens

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: settings.py
data/: dataset.jsonl  train.jsonl  train_chat.jsonl  val.jsonl  val_chat.jsonl
docker/: api.Dockerfile  frontend.Dockerfile
frontend/: package-lock.json
frontend/src/: App.css  App.tsx  types.ts
k8s/: api-deployment.yml  frontend-deployment.yml  namespace.yml  vllm-deployment.yml
scripts/: verify_setup.py
src/finlens/: prompts.py  schemas.py
src/finlens/api/: database.py  main.py  models.py
src/finlens/dataset/: formatter.py  generator.py  validator.py
src/finlens/evaluation/: eval.py
src/finlens/guardrails/: checks.py  pipeline.py
src/finlens/monitoring/: metrics.py  tracing.py
src/finlens/training/: train.py
tests/: test_guardrails.py
