[project]
name = "finlens"
version = "0.1.0"
description = "Production LLMOps: fine-tuned Llama for SEC filing extraction"
requires-python = ">=3.12"

dependencies = [
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "httpx>=0.27,<1",
    "rich>=13.7,<14",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "fastapi>=0.111,<1",
    "uvicorn[standard]>=0.30,<1",
    "sqlalchemy>=2.0,<3",
    "aiosqlite>=0.20,<1",
    "jinja2>=3.1,<4",
    "datasets>=2.20,<3",
    "jsonschema>=4.22,<5",
    "opentelemetry-api>=1.25,<2",
    "opentelemetry-sdk>=1.25,<2",
    "opentelemetry-exporter-otlp>=1.25,<2",
    "prometheus-client>=0.20,<1",
    "pytest>=8.2,<9",
    "pytest-asyncio>=0.23,<1",
    "ruff>=0.5,<1",
]

training = [
    "torch>=2.3,<3",
    "transformers>=4.43,<5",
    "peft>=0.11,<1",
    "trl>=0.9,<1",
    "bitsandbytes>=0.43,<1",
    "accelerate>=0.31,<1",
    "datasets>=2.20,<3",
    "wandb>=0.17,<1",
]

quantization = [
    "auto-gptq>=0.7,<1",
    "optimum>=1.20,<2",
]

inference = [
    "vllm>=0.5,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.hatch.build.targets.wheel]
packages = ["src/finlens"]